--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
