--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/animate.css/animate.min.css"
             ],
-            "scripts": [ "./node_modules/jquery/dist/jquery.min.js" ]
+            "scripts": [ 
+              "./node_modules/jquery/dist/jquery.min.js"
+            ]
 
           },
           "configurations": {
