--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --prod"
   },
+  "engine": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
+  },
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
@@ -31,8 +35,8 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
