--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "dev": "ng build --watch && node index.js",
+    "dev": "ng build & node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -43,9 +43,9 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
